--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -9,7 +9,7 @@
         This is my page showcasing my web DNA.
         I currently am enrolled at Huntington University as a junior.
         I am originally from Lexington, South Carolina.
-        I am also on the Mens bolwing program here at HU.
+        I am also on the Mens bowling program here at HU.
     </p>
 
     <hr />
