--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -16,7 +16,7 @@
 
     <section class="section-a">
       <h2>About Me</h2>
-      <p>This is my page showcasing my web DNA. I currently am enrolled at <a href="https://www.huntington.edu/">Huntington University</a> as a junior. I am originally from Lexington, South Carolina. I am also on the Mens bolwing program here at HU.</p>
+      <p>This is my page showcasing my web DNA. I currently am enrolled at <a href="https://www.huntington.edu/">Huntington University</a> as a junior. I am originally from Lexington, South Carolina. I am also on the Mens bowling program here at HU.</p>
 
       <h3>Planned Major/Minors</h3>
       <ul>
